<resources>
    <string name="app_name">Inline</string>
    <string name="description">Real-time text formatting android tool</string>

    <string name="channel_name">Error</string>
    <string name="channel_description">Inline exceptions</string>

    <string name="turn_on">Turn on</string>

    <string name="storage_permission">Storage permission</string>
    <string name="open_accessibility_settings">Open accessibility settings</string>

    <string name="reload">Reload</string>
    <string name="reload_hint">Recreate environment, initializes modules</string>
    <string name="internal_modules">Internal modules</string>

    <string name="loader_availability">Loader availability</string>

    <string name="preferences">Preferences</string>

    <string name="modules">Modules</string>
    <string name="modules_hint">Manage internal modules</string>

    <string name="repository_url">Repository URL</string>

    <string name="download">Download</string>
    <string name="remove">Remove</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>