<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/open_accessibility_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"
        app:layout_constraintBottom_toTopOf="@+id/reload_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/request_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        app:layout_constraintBottom_toTopOf="@+id/loader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reload_service" />

    <Button
        android:id="@+id/reload_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"
        app:layout_constraintBottom_toTopOf="@+id/request_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_accessibility_settings" />

    <TextView
        android:id="@+id/optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_storage_permission"
        app:layout_constraintEnd_toEndOf="@+id/request_permission"
        app:layout_constraintStart_toStartOf="@+id/request_permission"
        app:layout_constraintTop_toBottomOf="@+id/request_permission" />

    <TextView
        android:id="@+id/turn_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_accessibility_settings"
        app:layout_constraintEnd_toEndOf="@+id/open_accessibility_settings"
        app:layout_constraintStart_toStartOf="@+id/open_accessibility_settings"
        app:layout_constraintTop_toBottomOf="@+id/open_accessibility_settings" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_hint"
        app:layout_constraintEnd_toEndOf="@+id/reload_service"
        app:layout_constraintStart_toStartOf="@+id/reload_service"
        app:layout_constraintTop_toBottomOf="@+id/reload_service" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loader_availability"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_permission" />

</androidx.constraintlayout.widget.ConstraintLayout>